--- a/blog-inner.html
+++ b/blog-inner.html
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="s-text-img__description editor-style">
+                    <div class="s-text__description editor-style pl-20">
                         <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
                             dictum non.</h4>
                         <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
@@ -258,7 +258,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="s-text__description editor-style">
+                    <div class="s-text__description editor-style pl-20">
                         <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
                             dictum non.</h4>
                         <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
@@ -348,7 +348,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="s-text-img__description editor-style">
+                    <div class="s-text__description editor-style pl-20">
                         <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
                             dictum non.</h4>
                         <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
@@ -454,7 +454,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="s-text-img__description editor-style">
+                    <div class="s-text-img__description editor-style pl-20">
                         <h4>Praesent semper feugiat nibh sed pulvinar proin gravida. Etiam erat velit scelerisque in
                             dictum non.</h4>
                         <p>Tellus mauris a diam maecenas sed enim ut sem. Lacinia at quis risus sed vulputate. Aliquam
@@ -562,6 +562,7 @@
             </div>
         </div>
     </section>
+
     <section class="s-cta mb-20">
         <div class="container">
             <div class="row m-row s-cta__top">
